--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
                 <br>
                 <br>
                 Contamos con una variedad de té vasta, que incluye marcas nacionales e importadas. 
-                Desde té negro hasta matcha, podes consultar nuestro menú en <a href="#">nuestro apartado sobre té</a>.
-                <br>
-                <br>
-                ¿Querés reservar una mesa para una fecha especial? ¡Hacé click <a href="#">acá</a>!
+                Desde té negro hasta matcha, podes consultar nuestro menú en <a href="menu.html">nuestro apartado sobre té</a>.
             </p>
 
             <div class="swiper mySwiper">
